include/altdss/capi/dss.h

    /*! 
    Array of strings with all XYCurve names.

    (API Extension)
    */
    ALTDSS_CAPI_DLL void XYCurves_Get_AllNames(char*** ResultPtr, int32_t* ResultDims);
    /*! 
    Number of XYCurve Objects
    */
    ALTDSS_CAPI_DLL int32_t XYCurves_Get_Count(void);
    /*! 
    Sets first XYcurve object active; returns 0 if none.
    */
    ALTDSS_CAPI_DLL int32_t XYCurves_Get_First(void);
    /*! 
    Name of active XYCurve Object
    */
    ALTDSS_CAPI_DLL const char* XYCurves_Get_Name(void);
    /*! 
    Advances to next XYCurve object; returns 0 if no more objects of this class
    */
    ALTDSS_CAPI_DLL int32_t XYCurves_Get_Next(void);
    /*! 
    Get Name of active XYCurve Object
    */
    ALTDSS_CAPI_DLL void XYCurves_Set_Name(const char* Value);
    /*! 
    Get/Set Number of points in X-Y curve
    */
    ALTDSS_CAPI_DLL int32_t XYCurves_Get_Npts(void);
    /*! 
    Get/Set X values as a Array of doubles. Set Npts to max number expected if setting
    */
    ALTDSS_CAPI_DLL void XYCurves_Get_Xarray(double** ResultPtr, int32_t* ResultDims);
    /*! 
    Same as XYCurves_Get_Xarray but using the global buffer interface for results
    */
    ALTDSS_CAPI_DLL void XYCurves_Get_Xarray_GR(void);
    /*! 
    Get/Set Number of Points in X-Y curve
    */
    ALTDSS_CAPI_DLL void XYCurves_Set_Npts(int32_t Value);
    /*! 
    Get/Set X values as a Array of doubles. Set Npts to max number expected if setting
    */
    ALTDSS_CAPI_DLL void XYCurves_Set_Xarray(const double* ValuePtr, int32_t ValueCount);
    /*! 
    Set X value or get interpolated value after setting Y
    */
    ALTDSS_CAPI_DLL double XYCurves_Get_x(void);
    /*! 
    Y value for present X or set this value then get corresponding X
    */
    ALTDSS_CAPI_DLL double XYCurves_Get_y(void);
    /*! 
    Get/Set Y values in curve; Set Npts to max number expected if setting
    */
    ALTDSS_CAPI_DLL void XYCurves_Get_Yarray(double** ResultPtr, int32_t* ResultDims);
    /*! 
    Same as XYCurves_Get_Yarray but using the global buffer interface for results
    */
    ALTDSS_CAPI_DLL void XYCurves_Get_Yarray_GR(void);
    ALTDSS_CAPI_DLL void XYCurves_Set_x(double Value);
    /*! 
    Set Y value or get interpolated Y value after setting X
    */
    ALTDSS_CAPI_DLL void XYCurves_Set_y(double Value);
    /*! 
    Get/Set Y values in curve; Set Npts to max number expected if setting
    */
    ALTDSS_CAPI_DLL void XYCurves_Set_Yarray(const double* ValuePtr, int32_t ValueCount);
    /*! 
    Factor to scale X values from original curve
    */
    ALTDSS_CAPI_DLL double XYCurves_Get_Xscale(void);
    /*! 
    Amount to shift X value from original curve
    */
    ALTDSS_CAPI_DLL double XYCurves_Get_Xshift(void);
    /*! 
    Factor to scale Y values from original curve
    */
    ALTDSS_CAPI_DLL double XYCurves_Get_Yscale(void);
    /*! 
    amount to shift Y valiue from original curve
    */
    ALTDSS_CAPI_DLL double XYCurves_Get_Yshift(void);
    /*! 
    Factor to scale X values from original curve
    */
    ALTDSS_CAPI_DLL void XYCurves_Set_Xscale(double Value);
    ALTDSS_CAPI_DLL void XYCurves_Set_Xshift(double Value);
    /*! 
    Amount to scale Y values from original curve. Represents a curve shift.
    */
    ALTDSS_CAPI_DLL void XYCurves_Set_Yscale(double Value);
    ALTDSS_CAPI_DLL void XYCurves_Set_Yshift(double Value);
    ALTDSS_CAPI_DLL int32_t XYCurves_Get_idx(void);
    ALTDSS_CAPI_DLL void XYCurves_Set_idx(int32_t Value);